--- a/frontend/src/app/modules/policy-engine/record/test-results/test-results.component.scss
+++ b/frontend/src/app/modules/policy-engine/record/test-results/test-results.component.scss
@@ -60,9 +60,6 @@
         padding: 0;
     }
 
-    .header-row-back {
-    }
-
     .test-breadcrumb {
         display: flex;
         align-items: center;
